// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders already seen if already_seen is on subject 1`] = `
<View
  collapsable={undefined}
  style={
    Object {
      "opacity": 0,
      "top": 0,
      "transform": Array [
        Object {
          "translateY": -10,
        },
        Object {
          "scale": 0.8,
        },
      ],
    }
  }
>
  <View
    style={
      Array [
        Object {
          "height": 100,
          "width": 100,
        },
        Object {
          "elevation": 1,
        },
      ]
    }
  >
    <View
      style={
        Array [
          undefined,
          undefined,
        ]
      }
    >
      <Image
        onLoadEnd={[Function]}
        resizeMethod="resize"
        resizeMode="contain"
        source={
          Object {
            "uri": "blah.jpg",
          }
        }
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "height": undefined,
              "width": undefined,
            },
            undefined,
          ]
        }
      />
      <View
        style={
          Array [
            undefined,
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "height": 100,
              "width": 100,
            }
          }
        >
          <View
            style={undefined}
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": "Karla",
                  },
                  undefined,
                ]
              }
            >
              ALREADY SEEN!
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            undefined,
            undefined,
          ]
        }
      >
        <View
          collapsable={undefined}
          style={
            Object {
              "backgroundColor": "rgba(114, 120, 119, 1)",
              "height": 100,
              "opacity": 0,
              "width": 100,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": "Karla",
                },
                undefined,
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders already seen if it was seen this session 1`] = `
<View
  collapsable={undefined}
  style={
    Object {
      "opacity": 0,
      "top": 0,
      "transform": Array [
        Object {
          "translateY": -10,
        },
        Object {
          "scale": 0.8,
        },
      ],
    }
  }
>
  <View
    style={
      Array [
        Object {
          "height": 100,
          "width": 100,
        },
        Object {
          "elevation": 1,
        },
      ]
    }
  >
    <View
      style={
        Array [
          undefined,
          undefined,
        ]
      }
    >
      <Image
        onLoadEnd={[Function]}
        resizeMethod="resize"
        resizeMode="contain"
        source={
          Object {
            "uri": "blah.jpg",
          }
        }
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "height": undefined,
              "width": undefined,
            },
            undefined,
          ]
        }
      />
      <View
        style={
          Array [
            undefined,
            undefined,
          ]
        }
      >
        <View
          style={
            Object {
              "height": 100,
              "width": 100,
            }
          }
        >
          <View
            style={undefined}
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": "Karla",
                  },
                  undefined,
                ]
              }
            >
              ALREADY SEEN!
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            undefined,
            undefined,
          ]
        }
      >
        <View
          collapsable={undefined}
          style={
            Object {
              "backgroundColor": "rgba(114, 120, 119, 1)",
              "height": 100,
              "opacity": 0,
              "width": 100,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": "Karla",
                },
                undefined,
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders back subject position correctly 1`] = `
<View
  collapsable={undefined}
  style={
    Object {
      "opacity": 0,
      "top": 0,
      "transform": Array [
        Object {
          "translateY": -10,
        },
        Object {
          "scale": 0.8,
        },
      ],
    }
  }
>
  <View
    style={
      Array [
        Object {
          "height": 100,
          "width": 100,
        },
        Object {
          "elevation": 1,
        },
      ]
    }
  >
    <View
      style={
        Array [
          undefined,
          undefined,
        ]
      }
    >
      <Image
        onLoadEnd={[Function]}
        resizeMethod="resize"
        resizeMode="contain"
        source={
          Object {
            "uri": "blah.jpg",
          }
        }
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "height": undefined,
              "width": undefined,
            },
            undefined,
          ]
        }
      />
      <View
        style={
          Array [
            undefined,
            undefined,
          ]
        }
      />
      <View
        style={
          Array [
            undefined,
            undefined,
          ]
        }
      >
        <View
          collapsable={undefined}
          style={
            Object {
              "backgroundColor": "rgba(114, 120, 119, 1)",
              "height": 100,
              "opacity": 0,
              "width": 100,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": "Karla",
                },
                undefined,
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders front subject position correctly 1`] = `
<View
  collapsable={undefined}
  style={
    Object {
      "opacity": 0,
      "top": 0,
      "transform": Array [
        Object {
          "scale": 0.9,
        },
      ],
    }
  }
>
  <View
    style={
      Array [
        Object {
          "height": 100,
          "width": 100,
        },
        Object {
          "elevation": 3,
        },
      ]
    }
  >
    <View
      style={
        Array [
          undefined,
          undefined,
        ]
      }
    >
      <Image
        onLoadEnd={[Function]}
        resizeMethod="resize"
        resizeMode="contain"
        source={
          Object {
            "uri": "blah.jpg",
          }
        }
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "height": undefined,
              "width": undefined,
            },
            undefined,
          ]
        }
      />
      <View
        style={
          Array [
            undefined,
            undefined,
          ]
        }
      />
      <View
        style={
          Array [
            undefined,
            undefined,
          ]
        }
      >
        <View
          collapsable={undefined}
          style={
            Object {
              "backgroundColor": "rgba(114, 120, 119, 1)",
              "height": 100,
              "opacity": 0,
              "width": 100,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": "Karla",
                },
                undefined,
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;
